--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,6 @@
-#Server configuration
+# Server
 server.servlet.context-path=/tpFoyer17
-server.port=8082
-### DATABASE ###
-spring.datasource.url=jdbc:mysql://localhost:3306/tpFoyer17?&createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
-### JPA / HIBERNATE ###
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+server.port=${SERVER_PORT:8082}
+
+# Active profile (default = dev)
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
